--- a/src/index.html
+++ b/src/index.html
@@ -6,11 +6,11 @@
   <link rel="icon" type="image/png" sizes="16x16" href="assets/images/favicon.png">
 
 
-  <!-- <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+  <!-- <link href="assets/plugins/bootstrap/css/bootstrap.min.css" rel="stylesheet">-->
 
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <link href="assets/css/colors/default-dark.css" id="theme" rel="stylesheet"> -->
+  <link id="tema" rel="stylesheet">
 
   <base href="/">
   <meta name="viewport" content="width=device-width, initial-scale=1">
